feature to master

--- a/sample-project/index.html
+++ b/sample-project/index.html
@@ -3,6 +3,8 @@
 
 <head>
      <title>HTML Application</title>
+     <title>HTML Application-edited</title>
+
 	 <link href="css/site.css" rel="stylesheet">
 </head>
 
@@ -54,5 +56,6 @@
         </div>
     </div>
 </body>
+
 
 </html>
