--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </div>
             <div class="content-body">
                 <div class="success-text">Success!</div>
-                <div class="description line-1"> Azure DevOps Project has been successfully setup</div>
-                <div class="description line-2"> Your HTML app is up and running on Azure</div>
+                <div class="description line-1"> Aws DevOps Project has been successfully setup</div>
+                <div class="description line-2"> Your HTML app is up and running on aws</div>
                 <div class="next-steps-container">
                     <div class="next-steps-header">Next up</div>
                     <div class="next-steps-body">
